{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 100,
  "lineage": "8fa3be57-6e99-933c-c13d-9aa477296835",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044c41112481d8f9f",
            "arn": "arn:aws:ec2:eu-central-1:933428634968:elastic-ip/eipalloc-044c41112481d8f9f",
            "association_id": "eipassoc-0e5a66c6eab194e36",
            "domain": "vpc",
            "id": "eipalloc-044c41112481d8f9f",
            "instance": "i-01074251b2023bda8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0be28cffe29c2ad9b",
            "private_dns": "ip-10-0-0-78.eu-central-1.compute.internal",
            "private_ip": "10.0.0.78",
            "public_dns": "ec2-63-177-14-238.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.177.14.238",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.backend",
            "aws_iam_instance_profile.frontend",
            "aws_iam_role.backend",
            "aws_iam_role.frontend",
            "aws_instance.backend",
            "aws_instance.frontend",
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a628e1e89aaedf80",
            "arn": "arn:aws:ec2:eu-central-1:933428634968:instance/i-0013fab0a5ae7b787",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bc-backend-profile",
            "id": "i-0013fab0a5ae7b787",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e68e6fabc5f8c117"
              }
            ],
            "primary_network_interface_id": "eni-0e68e6fabc5f8c117",
            "private_dns": "ip-10-0-0-85.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.85",
            "public_dns": "ec2-3-72-235-87.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.235.87",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f53bf792bc86daf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037e5cfe3015aa04f",
            "tags": {
              "Name": "bc-backend"
            },
            "tags_all": {
              "Name": "bc-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0413bd4cf6f750914"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933428634968",
            "id": "i-0013fab0a5ae7b787",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.backend",
            "aws_iam_role.backend",
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a628e1e89aaedf80",
            "arn": "arn:aws:ec2:eu-central-1:933428634968:instance/i-01074251b2023bda8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bc-frontend-profile",
            "id": "i-01074251b2023bda8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0be28cffe29c2ad9b"
              }
            ],
            "primary_network_interface_id": "eni-0be28cffe29c2ad9b",
            "private_dns": "ip-10-0-0-78.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.78",
            "public_dns": "ec2-18-196-26-220.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.26.220",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07eef70c47ec8bac8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037e5cfe3015aa04f",
            "tags": {
              "Name": "bc-frontend"
            },
            "tags_all": {
              "Name": "bc-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c6adc7f9b6626b7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933428634968",
            "id": "i-01074251b2023bda8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.backend",
            "aws_iam_instance_profile.frontend",
            "aws_iam_role.backend",
            "aws_iam_role.frontend",
            "aws_instance.backend",
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:933428634968:internet-gateway/igw-0ed63d5ff5d655f6e",
            "id": "igw-0ed63d5ff5d655f6e",
            "owner_id": "933428634968",
            "region": "eu-central-1",
            "tags": {
              "Name": "bc-igw"
            },
            "tags_all": {
              "Name": "bc-igw"
            },
            "vpc_id": "vpc-09a3eee63bdc1da74"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:933428634968:route-table/rtb-0a1b4dec49153c960",
            "id": "rtb-0a1b4dec49153c960",
            "owner_id": "933428634968",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed63d5ff5d655f6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bc-rt"
            },
            "tags_all": {
              "Name": "bc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a3eee63bdc1da74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933428634968",
            "id": "rtb-0a1b4dec49153c960",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053b3ce824f4a3fa9",
            "region": "eu-central-1",
            "route_table_id": "rtb-0a1b4dec49153c960",
            "subnet_id": "subnet-037e5cfe3015aa04f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:933428634968:security-group/sg-0413bd4cf6f750914",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0413bd4cf6f750914",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c6adc7f9b6626b7"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "bc-backend-sg",
            "name_prefix": "",
            "owner_id": "933428634968",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a3eee63bdc1da74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933428634968",
            "id": "sg-0413bd4cf6f750914",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:933428634968:security-group/sg-03c6adc7f9b6626b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c6adc7f9b6626b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bc-frontend-sg",
            "name_prefix": "",
            "owner_id": "933428634968",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a3eee63bdc1da74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933428634968",
            "id": "sg-03c6adc7f9b6626b7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:933428634968:subnet/subnet-037e5cfe3015aa04f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037e5cfe3015aa04f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933428634968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "bc-public"
            },
            "tags_all": {
              "Name": "bc-public"
            },
            "vpc_id": "vpc-09a3eee63bdc1da74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933428634968",
            "id": "subnet-037e5cfe3015aa04f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:933428634968:vpc/vpc-09a3eee63bdc1da74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0539e774cef2b3b03",
            "default_route_table_id": "rtb-081b871b5601fd296",
            "default_security_group_id": "sg-0b7bdde416fe9f1db",
            "dhcp_options_id": "dopt-01b3bde255d054406",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a3eee63bdc1da74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081b871b5601fd296",
            "owner_id": "933428634968",
            "region": "eu-central-1",
            "tags": {
              "Name": "bc-vpc"
            },
            "tags_all": {
              "Name": "bc-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "933428634968",
            "id": "vpc-09a3eee63bdc1da74",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}